Fix Java 11 compile warnings
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EbrcWebsiteCommon/branches/strategy-loading@98743 735e2a04-f8fc-0310-8a1b-f2942603c481